AC_PREREQ([2.68])
AC_INIT([rbm], [0.1], [chetant@gmail.com])
AC_CONFIG_SRCDIR([src/rbm.hpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-larmadillo':
AC_CHECK_LIB([armadillo], [main])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile.inc])
AC_OUTPUT
